Renderer class with clear screen method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,10 @@ add_executable(Quack main.cpp
         include/Quack/Core/Time.hpp
         src/Quack/Core/Input.cpp
         include/Quack/Core/Input.hpp
-        include/Quack/Core/Keyboard.hpp)
+        include/Quack/Core/Keyboard.hpp
+        src/Quack/Graphics/Renderer.cpp
+        src/Quack/Graphics/Renderer.hpp
+)
 
 target_include_directories(Quack PRIVATE include)
 target_link_libraries(Quack PRIVATE glad glfw)
