Static Logger class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,9 @@ add_executable(Quack main.cpp
         include/Quack/Graphics/Vertex.hpp
         include/Quack/Core.hpp
         include/Quack/Graphics.hpp
+        include/Quack/Utils/LogLevel.hpp
+        src/Quack/Utils/Logger.cpp
+        include/Quack/Utils/Logger.hpp
 )
 
 target_include_directories(Quack PRIVATE include)
