3D camera with perspective projection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ add_executable(Quack main.cpp
         include/Quack/Scene/Component.hpp
         include/Quack/Scene/Scene.hpp
         include/Quack/Scene/MeshRendererComponent.hpp
+        include/Quack/Scene/CameraComponent.hpp
 )
 
 target_include_directories(Quack PRIVATE include)
