Add a header for Scene module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ add_executable(Quack main.cpp
         include/Quack/Scene/MeshRendererComponent.hpp
         include/Quack/Scene/CameraComponent.hpp
         include/Quack/Utils.hpp
+        include/Quack/Scene.hpp
 )
 
 target_include_directories(Quack PRIVATE include)
