Material with color field

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ add_executable(Quack main.cpp
         include/Quack/Scene/CameraComponent.hpp
         include/Quack/Utils.hpp
         include/Quack/Scene.hpp
+        include/Quack/Graphics/Material.hpp
 )
 
 target_include_directories(Quack PRIVATE include)
