Global ambient lighting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,8 @@ add_executable(Quack main.cpp
         src/Quack/Graphics/Texture.cpp
         include/Quack/Graphics/Texture.hpp
         include/Quack/Core/Mouse.hpp
+        src/Quack/Graphics/GlobalLight.cpp
+        include/Quack/Graphics/GlobalLight.hpp
 )
 
 target_include_directories(Quack PRIVATE include external)
